[package]
name = "tailcall-launchpad"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { version = "0.13" }
tonic = { version = "0.12" }
tonic-reflection = { version = "0.12" }
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "sync",
] }
tokio-stream = { version = "0.1.15" }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = { version = "0.15.7" }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = "0.12"

[workspace.dependencies]
tracing = { version = "0.1.40" }
thiserror = { version = "1.0.63" }
time = { version = "0.3.36" }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
regex = { version = "1.10.6" }
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = { version = "1.0.128" }
serde = { version = "1.0", features = ["derive"] }
